--- a/ItEasy/recipe/RecipeCard.storyboard
+++ b/ItEasy/recipe/RecipeCard.storyboard
@@ -40,13 +40,13 @@
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
                                     <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k8f-YN-UBm">
-                                        <rect key="frame" x="264" y="160" width="100" height="30"/>
+                                        <rect key="frame" x="254" y="160" width="110" height="30"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="KRd-4k-gZN">
-                                            <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="110" height="30"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="kcal" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J8j-Z3-fKV">
-                                                    <rect key="frame" x="50" y="0.0" width="50" height="30"/>
+                                                    <rect key="frame" x="60" y="0.0" width="50" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="50" id="N2W-2t-GSS"/>
                                                     </constraints>
@@ -55,7 +55,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="165.5" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MSB-k7-hT3">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="30"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="60" height="30"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
@@ -74,7 +74,7 @@
                                         </view>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="Hw1-Kv-UXP"/>
-                                            <constraint firstAttribute="width" constant="100" id="ylH-Ta-a6y"/>
+                                            <constraint firstAttribute="width" constant="110" id="ylH-Ta-a6y"/>
                                         </constraints>
                                         <blurEffect style="regular"/>
                                         <userDefinedRuntimeAttributes>
@@ -107,7 +107,7 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="kiO-qq-DZS">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="45" estimatedRowHeight="320" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="kiO-qq-DZS">
                                 <rect key="frame" x="20" y="474" width="374" height="298"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <sections/>
@@ -303,8 +303,6 @@
                             <constraint firstItem="4uN-lW-QaL" firstAttribute="trailing" secondItem="4QY-u5-Zg1" secondAttribute="trailing" constant="20" id="Sbz-JU-V7g"/>
                             <constraint firstItem="H8R-0S-BqX" firstAttribute="top" secondItem="4uN-lW-QaL" secondAttribute="top" constant="20" id="a4v-CM-JPj"/>
                             <constraint firstItem="4uN-lW-QaL" firstAttribute="trailing" secondItem="IdJ-g0-Eav" secondAttribute="trailing" constant="20" id="ai8-Lj-vie"/>
-                            <constraint firstItem="kiO-qq-DZS" firstAttribute="leading" secondItem="4uN-lW-QaL" secondAttribute="leading" constant="20" id="d8q-BO-Vf8"/>
-                            <constraint firstItem="kiO-qq-DZS" firstAttribute="leading" secondItem="4QY-u5-Zg1" secondAttribute="leading" id="fcZ-A8-LQz"/>
                             <constraint firstItem="4uN-lW-QaL" firstAttribute="bottom" secondItem="Fmh-2c-qyN" secondAttribute="bottom" constant="20" id="iJS-gW-QMj"/>
                             <constraint firstItem="IdJ-g0-Eav" firstAttribute="leading" secondItem="4uN-lW-QaL" secondAttribute="leading" constant="20" id="ibX-5n-5n2"/>
                             <constraint firstItem="Fmh-2c-qyN" firstAttribute="leading" secondItem="4uN-lW-QaL" secondAttribute="leading" constant="20" id="qYH-VH-mbe"/>
